--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="name-div"><h1>Priyanka Leeya Pereira</h1></div>
     <div class="intro-div">
         <div class="intro-div-img"><img src="./image/IMAG2082_3.jpg" alt="my image" height="250px" width="180px;"></div>
-        <div class="intro-div-p"><p>Hello! Priyanka here. I've completed my bachelor degree and in a pursuit of further studies. Currently completing my full stack web development internship. Eager to learn new technologies and looking for better opportunities. </p></div>
+        <div class="intro-div-p"><p>Hello! Priyanka here. I've completed my bachelor's degree and am in pursuit of further studies. Currently completing my full-stack web development internship. Eager to learn new technologies and looking for better opportunities. </p></div>
     </div>
     <div class="skill-div">
         <div><h2>Skills:</h2></div>
