--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div><h2>Skills:</h2></div>
         <div class="skill-logo">
             <img src="./image/html.png" alt="html_logo" height="100px" width="100px" />
-            <img src="./image/javascript.png" alt="js_logo" height="100px" width="200px" />
+            <img src="./image/Javascript.png" alt="js_logo" height="100px" width="200px" />
             <img src="./image/css.png" alt="css_logo" height="100px" width="130px" />
             <img src="./image/MySQL.png" alt="mysql_logo" height="100px" width="200px" />
             <img src="./image/php.png" alt="php_logo" height="100px" width="200px" />
